Fix match result saving layout issues

--- a/app/javascript/src/styles/_match.scss
+++ b/app/javascript/src/styles/_match.scss
@@ -22,6 +22,7 @@
 
   &__row {
     display: flex;
+    align-items: flex-start;
   }
 
   &__teams {
@@ -31,6 +32,7 @@
     display: flex;
     flex-wrap: wrap;
     flex-grow: 1;
+    align-items: center;
   }
 
   &__teams-separator, &__goals-separator {
